fixed sidebar for the 3000 time

--- a/src/App.css
+++ b/src/App.css
@@ -340,10 +340,12 @@ input[type="password"] {
   transition: width 0.3s ease;
   display: flex;
   /* background: #121212e6; */
-  background: #000;
+  background: transparent;
   color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   /* height: 100%;
   width: 100%; */
+  border-right: 1px solid #7939ff;
   border-top-right-radius: 13px;
   border-bottom-right-radius: 13px;
   /* position: fixed; */
@@ -395,28 +397,40 @@ input[type="password"] {
 
 .sideLinks{
   display: flex;
-  color: #fff;
+  color: #000;
   /* padding: 5% 8%;
   margin-top: 7px; */
   align-items: center;
   text-align: center;
-  font-size: 99%;
-  padding: 0% 2% 0% 7%;
-  margin-top: 1.83rem;
-  gap: 10px;
+  font-size: 100%;
+  /* padding: 0% 2% 0% 7%; */
+  /* margin-top: 0.5rem; */
+  height: 3.5rem;
+  /* gap: 10px; */
   transition: all 0.1s;
   /* font-size: 26px; */
   text-decoration: none;
   /* width: fit-content; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sideLinks:first-child {
+  margin: 0 !important;
+  border-top-right-radius: 13px;
 }
 .sideLinks:active {
 color: #7939FF !important;
+background-color: #f0f0f0;
 }
 .active #active {
+  background-color: #f0f0f0;
   color: #7939FF !important;
+  /* width: 100%; */
 }
-.sideLinks:hover {
+.sideLinks:hover, .sideLinks-logout:hover {
   /* background: #7939FF; */
+  background-color: #f0f0f0;
   color: #7939FF;
   transition: all 0.1s;
 }
@@ -428,13 +442,20 @@ color: #7939FF !important;
   /* gap: 15px; */
   font-size: 100%;
   text-decoration: none; 
+  width: calc(97% - 3rem);
+  height: 3.5rem;
+  align-items: center;
+  justify-content: start;
 }
 
 @media screen and (max-width: 768px) {
   .sidebar{
     min-height: calc(100vh - 62px) !important;
+    position: relative;
+    left: 0;
+    z-index: 2000;
   }
-  .sideLinks{
+  /* .sideLinks{
     padding: 0% 0% 0% 5.4% !important;
     margin-top: 1.66rem !important;
     gap: 6px !important;
@@ -445,8 +466,7 @@ color: #7939FF !important;
   }
   .sideIcon {
     font-size: 92% !important;
-    /* padding: 7.3% 0px 0px 4% !important; */
-  }
+  } */
   .userIconContainer {
     right: 0.5rem !important;
     width: 2.4rem !important;
@@ -479,12 +499,58 @@ color: #7939FF !important;
 }
 
 .sideIcon {
+  margin-left: 3%;
   display: flex;
   /* padding: 6.4% 0px 0px 4%; */
   /* margin-top: 9px; */
   gap: 15px;
-  /* font-size: 111%; */
+  font-size: 112%;
   text-decoration: none; 
+  width: 3rem;
+  height: 3.5rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.sideLogout-hr {
+  /* display: flex;
+  justify-content: center; */
+  color: #000;
+  border: 1px solid #000;
+  width: 77%;
+  margin: 5% auto;
+  opacity: 0.5;
+}
+
+.sideLink-logout {
+  display: flex;
+  /* padding: 10px 0px 0px 0px; */
+  /* margin-top: 7px; */
+  /* gap: 15px; */
+  font-size: 100%;
+  text-decoration: none; 
+  width: calc(75% - 3rem);
+  height: 3.5rem;
+  align-items: center;
+  justify-content: start;
+  color: #f00;
+}
+
+.sideIcon-logout {
+  color: #f00;
+  /* margin-left: 15%; */
+  display: flex;
+  /* padding: 6.4% 0px 0px 4%; */
+  /* margin-top: 9px; */
+  gap: 15px;
+  font-size: 112%;
+  text-decoration: none; 
+  width: 3rem;
+  height: 3.5rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 .bars {
@@ -1282,11 +1348,12 @@ input[type="file"]::placeholder {
   }
   .chat-container {
     width: calc(100vw - 10%) !important;
-    bottom: 1.5rem !important;
-    /* z-index: -1; */
+    /* bottom: 1.5rem !important; */
+    z-index: 0;
   }
   .chat-messages {
     max-height: calc(100vh - 30vh) !important;
+    min-height: 70vh !important;
   }
   .message {
     width: max-content;
@@ -3250,12 +3317,12 @@ iframe {
   }
   .home-myAssBtn {
     color: #000;
-    font-size: 77% !important;
+    font-size: 80% !important;
     background-color: #7939ff;
-    width: 4.6rem !important;
+    width: 5.5rem !important;
     height: 1.9rem !important;
     border: none;
-    border-radius: 0.8rem !important;
+    border-radius: 0.5rem !important;
     cursor: default !important;
   }
   .home-QuizContainer {
@@ -3336,7 +3403,8 @@ iframe {
   }
   .searchBar-container {
     border-radius: 0.44rem !important;
-    margin-left: 12%;
+    /* margin-left: 12%; */
+    margin-left: 13.5%;
     display: flex;
     width: 40% !important;
     height: 50% !important;
@@ -3380,12 +3448,15 @@ iframe {
     height: 1.7rem !important;
   }
   .navLogo-container {
-    width: 4.8rem !important;
-    height: 1.03rem !important;
+    /* width: 4.8rem !important; */
+    width: 5.75rem !important;
+    /* height: 1.03rem !important; */
+    height: 1.125rem !important;
     display: flex;
     justify-content: center;
     align-items: center;
-    left: 10% !important;
+    /* left: 10% !important; */
+    left: 9% !important;
   }
   .logOutModal {
     width: 18rem !important;
@@ -3690,6 +3761,9 @@ iframe {
     padding: auto !important;
     margin: auto !important;
   }
+  .content-container {
+    height: 91vh !important;
+  }
 }
 
 .notification-dropdown {
@@ -3751,18 +3825,22 @@ iframe {
   width: calc(100vw - 50%);
   max-width: 56rem;
   /* margin: auto; */
-  position: fixed;
-  bottom: 2rem;
+  position: relative;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   background-color: #fff;
   border-radius: 1rem;
+  padding-bottom: 1px;
+  /* height: 30rem; */
   /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); */
 }
 
 .chat-messages {
-  max-height: 40rem;
-  /* height: 555px; */
+  /* max-height: 40rem; */
+  max-height: 34rem;
+  min-height: 66vh;
+  height: 33rem;
   overflow-y: auto;
   padding: 10px;
 }
@@ -3773,7 +3851,8 @@ iframe {
   border-radius: 10px;
   word-wrap: break-word;
   width: max-content;
-  max-width: 666px;
+  /* max-width: 666px; */
+  max-width: 500px;
   display: flex;
 }
 
