--- a/src/App.css
+++ b/src/App.css
@@ -415,7 +415,7 @@ input[type="password"] {
   align-items: center;
   justify-content: center;
 }
-.sideLinks:first-child {
+.sideLinks:first-child:active {
   margin: 0 !important;
   border-top-right-radius: 13px;
 }
@@ -518,7 +518,7 @@ background-color: #f0f0f0;
   justify-content: center; */
   color: #000;
   border: 1px solid #000;
-  width: 77%;
+  width: 80%;
   margin: 5% auto;
   opacity: 0.5;
 }
@@ -1895,6 +1895,12 @@ input[type="file"]::placeholder {
   font-size: 116%;
 }
 
+.fileName-container {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 .downloadFile-icon {
   color: #7939FF;
   background-color: transparent;
@@ -2677,11 +2683,15 @@ input[type="file"]::placeholder {
 
 .react-player__preview {
   border-radius: 1.5rem !important;
+  background: #000 !important;
+  box-shadow: 1px 2px 8px 2px rgba(0, 0, 0, 0.2);
+  border: 1px solid #7839ff;
 }
 
 .react-player__shadow {
   border-radius: 1rem !important;
   background-color: #7939ff !important;
+  box-shadow: 1px 2px 8px 2px rgba(0, 0, 0, 0.2);
 }
 
 .video-title {
@@ -2695,6 +2705,7 @@ input[type="file"]::placeholder {
 
 iframe {
   border-radius: 2rem !important;
+  border: 1px solid #7939ff;
 }
 
 .grade {
@@ -2725,7 +2736,7 @@ iframe {
 
 .AR-title {
   margin: 0px 0px 0px 3%;
-  font-size: 100%;
+  font-size: 123%;
   color: #7939FF;
   font-weight: bold;
   text-align: center;
