--- a/src/App.css
+++ b/src/App.css
@@ -334,15 +334,28 @@ input[type="password"] {
   border-top-left-radius: 196.5px;
 }
 
+@media (min-width: 1200px) {
+  .sidCol {
+    flex: 0 0 auto;
+    max-width: 200px !important;
+  }
+}
+
 .sidebar {
-  width: 0;
-  max-width: 200px;
+  width: 0px;
+  /* max-width: 200px; */
   transition: width 0.3s ease;
   display: flex;
   /* background: #121212e6; */
   background: transparent;
   color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4); */
+  /* box-shadow: 4px 0 0 rgba(121, 57, 255, 0.1); */
+  box-shadow: 
+  1px 0 0 rgba(121, 57, 255, 0.2),
+  2px 0 0 rgba(121, 57, 255, 0.2),
+  3px 0 0 rgba(121, 57, 255, 0.1),
+  4px 0 0 rgba(121, 57, 255, 0.1);
   /* height: 100%;
   width: 100%; */
   border-right: 1px solid #7939ff;
@@ -352,13 +365,13 @@ input[type="password"] {
   /* bottom: 0; */
   /* transition:all 0.3s ease !important; */
   height: calc(100vh - 73px);
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 0%;
   margin: 0%;
 }
 
 .sidebar.open {
-  width: 100%; /* or any other value you prefer */
+  width: 100%;
   z-index: 300;
 }
 
@@ -420,8 +433,8 @@ input[type="password"] {
   border-top-right-radius: 13px;
 }
 .sideLinks:active {
-color: #7939FF !important;
-background-color: #f0f0f0;
+  color: #7939FF !important;
+  background-color: #f0f0f0;
 }
 .active #active {
   background-color: #f0f0f0;
@@ -454,6 +467,7 @@ background-color: #f0f0f0;
     position: relative;
     left: 0;
     z-index: 2000;
+    max-width: 200px;
   }
   /* .sideLinks{
     padding: 0% 0% 0% 5.4% !important;
@@ -520,7 +534,7 @@ background-color: #f0f0f0;
   border: 1px solid #000;
   width: 80%;
   margin: 5% auto;
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .sideLink-logout {
@@ -673,6 +687,7 @@ background-color: #f0f0f0;
 
 .content-container {
   padding-bottom: 1.4%;
+  min-width: calc(100% - 200px);
 }
 
 .content {
@@ -1074,6 +1089,10 @@ input[type="file"]::placeholder {
 @media screen and (max-width: 768px) {
   .course-header {
     font-size: 191%;
+  }
+  .cards {
+    max-width: 20.5rem !important;
+    padding-right: 4px;
   }
 }
 
@@ -3118,7 +3137,7 @@ iframe {
 
 .homeCourses-container {
   /* height: 30vh !important; */
-  overflow-x: scroll;
+  overflow-x: auto;
   /* overflow-y: hidden; Hide vertical scrollbar */
   /* white-space: nowrap; Prevent content from wrapping */
 }
@@ -3158,6 +3177,7 @@ iframe {
 
 .home-myAssTitleContainer {
   padding: 0% 1.6%;
+  min-width: 325px;
 }
 
 .home-myAssTitle {
@@ -3187,7 +3207,7 @@ iframe {
 }
 
 .home-myAssBtn {
-  color: #000;
+  color: #fff;
   font-size: 150%;
   background-color: #7939ff;
   width: 10rem;
@@ -3285,6 +3305,7 @@ iframe {
 @media screen and (max-width: 768px) {
   .content-container {
     padding-bottom: 7% !important;
+    height: calc(100vh - 3.9rem) !important;
   }
   .homepage-container {
     width: 100%;
@@ -3333,6 +3354,7 @@ iframe {
   .home-myAssTitleContainer {
     padding: 0% 1.6%;
     width: inherit;
+    min-width: 0px !important;
   }
   .home-myAssTitle {
     font-size: 123% !important;
@@ -3347,13 +3369,13 @@ iframe {
     align-items: center;
     white-space: nowrap;
     margin: 0%;
-    font-size: 80%;
+    font-size: 81%;
   }
   .home-myAssDate {
     color: #555;
     padding-left: 3%;
     margin: 0%;
-    font-size: 80%;
+    font-size: 81%;
   }
   .home-myAssBtnContainer {
     padding-right: 1%;
@@ -3480,15 +3502,15 @@ iframe {
     height: 1.2rem !important;
   }
   .bars {
-    width: 1.6rem !important;
-    height: 1.6rem !important;
+    width: 1.75rem !important;
+    height: 1.75rem !important;
   }
   .bars:active {
     background-color: transparent;
   }
   .barsIcon {
-    width: 1.7rem !important;
-    height: 1.7rem !important;
+    width: 1.75rem !important;
+    height: 1.5rem !important;
   }
   .navLogo-container {
     /* width: 4.8rem !important; */
@@ -3567,6 +3589,9 @@ iframe {
   /* .notification-dropdown-item:last-child {
     padding-bottom: 1rem !important;
   } */
+  .latest-updates {
+    font-size: 100% !important;
+  }
 }
 
 .logOutModal-container {
@@ -3804,10 +3829,61 @@ iframe {
     padding: auto !important;
     margin: auto !important;
   }
-  .content-container {
+  /* .content-container {
     height: 91vh !important;
+  } */
+}
+
+/* @media screen and (min-width: 1080px) and (max-width: 1920px) {
+  .content-container {
+    height: 82vh !important;
+  }
+} */
+/* @media screen and (min-width: 500px) and (max-width: 740px) {
+  .content-container {
+    height: 90vh !important;
   }
 }
+@media screen and (min-width: 740px) and (max-width: 768px) {
+  .content-container {
+    height: 82vh !important;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 980px) {
+  .content-container {
+    height: 85vh !important;
+  }
+}
+@media screen and (min-height: 615px) and (max-height: 666px) {
+  .content-container {
+    height: 89vh !important;
+  }
+}
+@media screen and (min-height: 515px) and (max-height: 615px) {
+  .content-container {
+    height: 88vh !important;
+  }
+}
+@media screen and (min-height: 480px) and (max-height: 515px) {
+  .content-container {
+    height: 87vh !important;
+  }
+}
+@media screen and (min-height: 400px) and (max-height: 480px) {
+  .content-container {
+    height: 86vh !important;
+  }
+}
+@media screen and (min-height: 360px) and (max-height: 400px) {
+  .content-container {
+    height: 85vh !important;
+  }
+}
+@media screen and (min-height: 300px) and (max-height: 360px) {
+  .content-container {
+    height: 82vh !important;
+  }
+} */
 
 .notification-dropdown {
   position: absolute;
@@ -3865,25 +3941,39 @@ iframe {
   /* top: 0.5rem; */
   /* width: 100%; */
   /* max-width: 66rem; */
+  width: 90%;
+  margin: auto;
   width: calc(100vw - 50%);
   max-width: 56rem;
   /* margin: auto; */
-  position: relative;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  /* position: relative; */
+  /* bottom: 0; */
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
   background-color: #fff;
   border-radius: 1rem;
   padding-bottom: 1px;
   /* height: 30rem; */
   /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); */
+  /* min-height: 33rem; */
+  /* min-height: 27vh; */
+  /* height: 50vh; */
+  /* display: flex; */
+  max-height: 72vh;
 }
 
 .chat-messages {
+  height: 68vh;
+  display: flex;
+  flex-direction: column;
   /* max-height: 40rem; */
-  max-height: 34rem;
-  min-height: 66vh;
-  height: 33rem;
+  /* position: absolute; */
+  /* display: flex;
+  flex-direction: column; */
+  /* max-height: 25rem; */
+  flex: 1;
+  /* height: auto; */
+  /* height: 66vh !important; */
   overflow-y: auto;
   padding: 10px;
 }
@@ -4203,7 +4293,7 @@ iframe {
 }
 
 
-audio {
+/* audio {
   width: 100%;
-}
+} */
 
